.qrc: add n062 (just run doxygen)

--- a/.qrc
+++ b/.qrc
@@ -1,3 +1,4 @@
-fd y /* ************************ C + git ************************
+fd y /* ************************ C + git + N2 ************************
 fi u ^ND^N^<4003>/cmacs^J
 fi u ^ND^N^<4003>/git.qm^J
+n062,!rm -rf html man;doxygen^J
